{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Player",
            "id": "fe5d4036-fddf-4ccc-aee3-bb9a2c0873c0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6bfa21b0-e6d2-484d-9b5c-9fcc495f636b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "80e4d01a-39c5-455b-b18e-fc7d2654a281",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "fe24d360-2730-4c51-811b-b3a97148c102",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "72fab9eb-6716-4a3d-9371-1e2a5c633d53",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlaceVoxel",
                    "type": "Button",
                    "id": "920ebc60-2597-45be-b4b9-3892c27d0e8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DestroyVoxel",
                    "type": "Button",
                    "id": "bafe0a38-4b38-486c-a952-5035e7aa2c28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SlotChangeLeft",
                    "type": "Button",
                    "id": "09f789d6-1384-4a3c-983b-bcf164146b82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SlotChangeRight",
                    "type": "Button",
                    "id": "808d9436-94f5-4770-9f3a-85253f11399b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraReset",
                    "type": "Button",
                    "id": "8c25f592-e302-463f-b10f-ea8246ebdf33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "232d5c68-3de7-4fec-9428-43111afcfd7d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "c05f3392-94e7-42dc-8fc0-21d4537fb735",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5e7a6e9b-bdda-457b-9a68-1cb91b674bb5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8fc22925-18cb-4a23-a316-02af7327b57f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b89a801f-bf01-4ad7-a3f5-e60dd8bc2d10",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c5d84aca-681a-42bd-9428-d30ae1ef3840",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow",
                    "id": "11955c6d-a653-40a3-8f89-84beacddd5d0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "dc8ac2ce-3f17-4fc2-af5f-3bd4ca07193d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bfa7e300-de90-4c45-b2b4-c5f3e9e6cdc5",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6797e17a-eff3-4a6c-887d-7925c37f8fce",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "af5ed4b0-b91f-49bc-93b0-40e3998540d6",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0bf14241-f467-486d-bd8b-3422800b9db5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40748fc0-136e-4c21-82bd-ad297dbe2f64",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50d75c89-cb26-47f4-bb1a-ee14e0700581",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b38adef9-ca18-4490-ac68-db58204956f3",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be67e1dd-a6ea-4624-80f7-2ca358a0ddfb",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efd51f87-5409-423e-b7dd-feda791aa613",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56b6d7ec-125f-49d5-b784-916f58d82a3f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "PlaceVoxel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd0ca558-50d8-4f05-81f5-11b48a207921",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "PlaceVoxel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70d076b3-ba9d-49e0-9473-42b018b5ce4b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "DestroyVoxel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74b715c5-4855-4b25-ad24-f23d95df894a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "DestroyVoxel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "812247c5-9283-477e-a9a5-7b3eca70d41f",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "SlotChangeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba9acce1-3e91-4204-8e25-973f87144600",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "SlotChangeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9c736d4-f884-4528-b8cb-4670a363929e",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "CameraReset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d812bf86-e4ce-4a18-a0d0-b73c378d1ef4",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "CameraReset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f45790b2-e59a-4874-8047-8b611adb2fce",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "SlotChangeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "159cb460-b2d4-4b57-8027-b3be1d5a01ba",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "SlotChangeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "86e37307-39b4-4bb6-89e9-d66183c63088",
            "actions": [
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "28331a8a-1171-4a69-98ca-33ebb6b349c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorClick",
                    "type": "Button",
                    "id": "76b1d633-7cb4-4157-ab5f-9d7828626c5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GamepadMouse",
                    "type": "Value",
                    "id": "90eeaadb-57d8-44be-95a2-6b686e018691",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f91ae61-774b-494b-969e-6dbf75c6fd80",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "245d84b3-ce22-431c-87b9-68703b6b2385",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1daa7b3-3efa-40d5-a85b-f26d66d3fda4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "CursorClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3c1189b-d851-4731-9b72-e646176150ab",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "CursorClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5992cd8f-e1f8-4c54-86af-a15a9ca1f253",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "GamepadMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Main",
            "id": "2de4182e-0ac6-423e-88f7-6f70dc64b617",
            "actions": [
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "b0ab358f-6c66-4aa2-8677-24fca4a96a8e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "452d32fc-9268-4e5c-b97f-242baa01c905",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Debug",
                    "type": "Button",
                    "id": "80b5f798-9ddc-49ba-8e88-e439cc68050c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Load",
                    "type": "Button",
                    "id": "7f56d062-6b4d-4507-a597-f0b4c5b4f792",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "736e7acb-48b5-4f46-a50f-dcb7795179a8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93caa6c6-534f-4482-a7b6-4a5df5e4f560",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "772d4d9f-bc53-4fe6-9a33-c574fb13dacb",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59264715-a05a-4b8b-958f-0522b852e72a",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Debug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5463de3-9329-43a4-8eb9-20de73aeef2a",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Paint",
            "id": "21e0865a-5841-43b4-abae-d9c0cd8ef2f8",
            "actions": [
                {
                    "name": "GetMousePos",
                    "type": "Button",
                    "id": "aecc76c7-cf1a-49aa-bc93-3f75d83fbba2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cc5dd3cb-c614-4c96-af4a-4606b8c63fe6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "キーボード＆マウス",
                    "action": "GetMousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80728e33-a929-4fda-a9d3-fa4e4104d7db",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "ゲームパッド",
                    "action": "GetMousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "キーボード＆マウス",
            "bindingGroup": "キーボード＆マウス",
            "devices": []
        },
        {
            "name": "ゲームパッド",
            "bindingGroup": "ゲームパッド",
            "devices": []
        }
    ]
}